<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diehard.pricecontrol.MainHome">

    <LinearLayout
        android:id="@+id/ImgLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/watchPic"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:contentDescription="@string/image_info"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/watch2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="84dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_label"
            android:textAlignment="center"
            android:textColor="@color/appLabel"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="84dp" />

        <EditText
            android:id="@+id/nameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/item_hint"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:nextFocusForward="@id/qtyEntry"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="84dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/qtyEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/qty"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:nextFocusForward="@id/priceEntry"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/priceEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/price_hint"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="22sp" />

        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="133dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/submitBtnBackground"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:text="@string/ok_btn"
            android:textAlignment="center"
            android:textColor="@color/btnText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="84dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/viewBtn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/view_products"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/searchBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@color/submitColorPotr"
                android:text="@string/search"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
